--- a/src/components/common/Card/card.css
+++ b/src/components/common/Card/card.css
@@ -1,10 +1,13 @@
 .card {
     border-radius: 5px;
     text-align: center;
-    /* padding: 10px; */
     box-sizing: border-box;
     transition: 0.4s;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+
+  .card-title {
+    font-weight: bold;
   }
 
 .card-body {
