--- a/src/pages/AboutUs/about-us.css
+++ b/src/pages/AboutUs/about-us.css
@@ -2,6 +2,10 @@
     margin: 60px 55px 120px 55px;
 }
 
+.container {
+    margin: 40px 0 -20px 0;
+}
+
 .about-us-image {
     width: 400px;
     border: 7px solid #408000;
