--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,5 +1,5 @@
 .header {
-    min-height: 100vh;
+    min-height: 120vh;
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
       url("../../images/homeImg.jpg") center/cover no-repeat fixed;
     position: relative;
@@ -7,55 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    top: -65px;
+    top: -100px;
     border-bottom: 10px solid #408000;
+    z-index: 1;
 }
-
-/* .header-title {
-    color: #fff;
-    font-weight: bolder;
-    font-size: 50px;
-    text-transform: uppercase;
-    text-align: center;
-    letter-spacing: 8px;
-}
-
-.header-body {
-    font-family: 'Lobster', cursive;
-    color: #408000;
-    text-align: center;
-}
-
-.button {
-    display: flex;
-    justify-content: center;
-}
-
-.btn-explore {
-    color: #fff;
-    border: 2px solid #408000;
-    background-color: #408000; 
-    outline: 2px solid #408000;
-    outline-offset: 5px;
-    font-size: 15px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    padding: 15px;
-    width: 130px;
-    border-radius: 100px;
-    margin-top: 16px;
-    transition: 1s;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.btn-explore:hover {
-    color: #008000;
-    border: 2px solid #fff;
-    background-color: #fff; 
-    outline: 2px solid #fff;
-    outline-offset: 5px;
-    font-weight: bold;
-}
-   */
