--- a/src/pages/Home/Header/header.css
+++ b/src/pages/Home/Header/header.css
@@ -26,6 +26,7 @@
     outline-offset: 5px;
     font-size: 15px;
     text-transform: uppercase;
+    text-decoration: none;
     letter-spacing: 2px;
     padding: 15px;
     width: 130px;
