--- a/src/pages/Features/features.css
+++ b/src/pages/Features/features.css
@@ -1,21 +1,20 @@
 .features {
     background-color: #e6ffe6;
-    padding: 30px;
+    padding: 60px;
 }
 
 .features-title {
     font-family: 'Lobster', cursive;
     color: #408000;
-    margin-top: 40px;
+    margin: 40px 20px;
     text-align: center;
 }
 
-.features-paragraph { 
+.features-subtitle {
+    margin-top: 50px; 
+    font-size: 15px;
+    color: rgb(156, 152, 152);
     text-align: center;
-    font-size: 20px;
-    color: rgb(103, 101, 101);
-    margin: 10px 0 50px 0;
-    width: 75%;
 }
 
 .features-images {
