--- a/src/components/common/Modal/modal.css
+++ b/src/components/common/Modal/modal.css
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: none;
 }
 .overlay__inner {
   background: white;
