--- a/src/pages/Register/register.css
+++ b/src/pages/Register/register.css
@@ -1,6 +1,5 @@
 .register {
     background-color: #e6ffe6;
-    padding: 30px;
 }
 
 .register-title {
@@ -8,17 +7,39 @@
     color: #408000;
     margin-top: 20px;
     text-align: center;
+    padding-bottom: 2rem;
 }
 
-.logo {
-    font-family: 'Lobster', cursive;
-    color: #408000;
-    margin-left: 5rem;
-    font-size: 2rem;
-    text-decoration: none;
-    transition: all 1s ease;
+form.register__form {
+    width: 50%;
+    border: transparent;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: 0 auto;
+    padding: 50px;
+    margin-bottom: 3rem;
+    background: #fff;
+    border-radius: 2rem;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.logo:hover {
-    color: rgb(27, 161, 60);
+button.btn.btn-register {
+    border-radius: 1.5rem;
+    background-color: #408000;
+    color: #e6ffe6;
+    margin-top: 0.7rem;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    transition: all 0.4s ease;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+button.btn.btn-register:hover {
+    background: rgb(27, 161, 60);
+}
+
+input {
+    margin-bottom: 0.6rem;
 }
