--- a/src/pages/Browse/browse.css
+++ b/src/pages/Browse/browse.css
@@ -8,6 +8,10 @@
   text-align: center;
 }
 
+h1.browse-title {
+  margin-top: 3rem;
+}
+
 h1.user-browse-title {
   margin-top: 2rem;
   font-family: "Lobster", cursive;
