--- a/src/pages/Write/write.css
+++ b/src/pages/Write/write.css
@@ -3,8 +3,8 @@ p.want-to-read {
     margin-top: -15px;
 }
 
-@media screen and (max-width: 730px) {
-    input.form-control {
+@media screen and (max-width: 800px) {
+    div.col-8.mx-auto.inputs {
         width: 100%;
     }
 }
